--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,3 @@
-<table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">TITULO</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let comic of Comics">
-      <td scope="row">{{comic.titulo}}</td>
-      <td>
-        <img src="assets/portadas/{{comic.img}}" width="80px" class="img-fluid" alt="{{comic.titulo}}">
-      </td>
-    </tr>
-  </tbody>
-</table>
+<app-navbar></app-navbar>
 
 <router-outlet></router-outlet>
