--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="content">
-    <mat-card class="example-card" *ngFor="let comic of Comics">
+    <mat-card class="example-card" *ngFor="let juego of Juegos">
         <mat-card-header>
-          <mat-card-title>{{comic.titulo}}</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+          <mat-card-title>{{juego.titulo}}</mat-card-title>
+          <mat-card-subtitle>{{juego.fecha}}</mat-card-subtitle>
         </mat-card-header>
-        <img class="img_portada" mat-card-image src="assets/portadas/{{comic.img}}" alt="{{comic.titulo}}">
+        <img class="img_portada" mat-card-image src="assets/caratulas/{{juego.img}}" alt="{{juego.titulo}}" width="250">
         <mat-card-actions>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
