--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,14 @@
 <div class="content">
-    <mat-card class="example-card" *ngFor="let juego of Juegos">
-        <mat-card-header>
-          <mat-card-title>{{juego.titulo}}</mat-card-title>
-          <mat-card-subtitle>{{juego.fecha}}</mat-card-subtitle>
-        </mat-card-header>
-        <img class="img_portada" mat-card-image src="assets/caratulas/{{juego.img}}" alt="{{juego.titulo}}" width="250">
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-    </mat-card>
+  <mat-card class="example-card mat-elevation-z3" *ngFor="let juego of Juegos">
+    <mat-card-header>
+      <mat-card-title>{{juego.titulo}}</mat-card-title>
+      <mat-card-subtitle>{{juego.fecha}}</mat-card-subtitle>
+    </mat-card-header>
+    <img class="img_portada" mat-card-image src="assets/caratulas/{{juego.img}}" alt="{{juego.titulo}}" width="250">
+    <mat-card-actions>
+      <button mat-button>
+        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
+      </button>
+    </mat-card-actions>
+  </mat-card>
 </div>
-
-  
