--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-slider></app-slider>
 <div class="content">
   <mat-card class="example-card mat-elevation-z3" *ngFor="let juego of Juegos">
     <mat-card-header>
@@ -6,7 +7,7 @@
     </mat-card-header>
     <img class="img_portada" mat-card-image src="assets/caratulas/{{juego.img}}" alt="{{juego.titulo}}" width="250">
     <mat-card-actions>
-      <button mat-button>
+      <button mat-button ng-click="favouriteThis(juego)">
         <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
       </button>
     </mat-card-actions>
