--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,9 @@
+.slider-container {
+    display: block;
+    height: 520px;
+    width: 60%;
+    margin: 15px auto 0 auto;
+}
 .content {
     width: 66%;
     margin: 0 auto;
@@ -11,4 +17,12 @@
 .img_portada {
     border-top: 1px solid lightgrey;
     border-bottom: 1px solid lightgrey;
+}
+.head-title a {
+    color: #16428d;
+    font-weight: bold;
+    text-decoration: none;
+}
+.head-title a:hover {
+    color: #3287b7;
 }
