--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,18 @@
-<app-slider></app-slider>
+<div class="slider-container">
+  <app-slider [slides]="slides"></app-slider>
+</div>
 <div class="content">
-  <mat-card class="example-card mat-elevation-z3" *ngFor="let juego of Juegos">
+  <mat-card class="example-card mat-elevation-z5" *ngFor="let juego of Juegos">
     <mat-card-header>
-      <mat-card-title>{{juego.titulo}}</mat-card-title>
+      <mat-card-title class="head-title"><a routerLink="juego/{{juego.tag}}">{{juego.titulo}}</a></mat-card-title>
       <mat-card-subtitle>{{juego.fecha}}</mat-card-subtitle>
     </mat-card-header>
     <img class="img_portada" mat-card-image src="assets/caratulas/{{juego.img}}" alt="{{juego.titulo}}" width="250">
     <mat-card-actions>
-      <button mat-button ng-click="favouriteThis(juego)">
+      <button mat-button (click)="handleClick(juego.id)">
         <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
       </button>
     </mat-card-actions>
   </mat-card>
 </div>
+<router-outlet></router-outlet>
