--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="slider-container">
+<mat-card  class="slider-container mat-elevation-z5">
   <app-slider [slides]="slides"></app-slider>
-</div>
+</mat-card>
 <div class="content">
   <mat-card class="example-card mat-elevation-z5" *ngFor="let juego of Juegos">
     <mat-card-header>
@@ -10,9 +10,8 @@
     <img class="img_portada" mat-card-image src="assets/caratulas/{{juego.img}}" alt="{{juego.titulo}}" width="250">
     <mat-card-actions>
       <button mat-button (click)="handleClick(juego.id)">
-        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
+        <p>Añadir a favoritos</p>
       </button>
     </mat-card-actions>
   </mat-card>
 </div>
-<router-outlet></router-outlet>
