--- a/src/app/home/slider/slider.component.html
+++ b/src/app/home/slider/slider.component.html
@@ -1,5 +1,5 @@
 <!-- carousel -->
-<div class="slider mat-elevation-z5">
+<div class="slider">
     <ng-container *ngFor="let slide of slides; let i = index">
       <img *ngIf="i === currentSlide"
         [src]="slide.src"
