--- a/src/app/preview/preview.component.css
+++ b/src/app/preview/preview.component.css
@@ -1,15 +1,18 @@
+:host {
+    flex: 1;
+}
 .preview-container {
-    width: 27%;
-    margin: 10px auto 0 auto;
+    width: 510px;
+    margin: 20px auto 20px auto;
+    text-align: center;
 }
 .pr {
     width: 500px;
     height: 551px;
-    position: relative;
-    top: 6px;
-    left: 6px;
+    object-fit: cover;
+    padding: 5px;
 }
 .controles {
-    padding: 10px;
+    padding: 10px 0 10px 0;
     text-align: center;
 }
